--- a/src/app/components/cv-templates/cv-templates.component.html
+++ b/src/app/components/cv-templates/cv-templates.component.html
@@ -1,1 +1,48 @@
+<ion-grid class="title">
+  <ion-row>
+    <ion-col size="1"> </ion-col>
+    <ion-col size="8">
+      <h1>Resume Templates</h1>
+      <p>/ 5+ years of experience</p>
+    </ion-col>
+    <ion-col size="1"> </ion-col>
+  </ion-row>
+</ion-grid>
+
+<mat-card class="info-card">
+  <mat-card-header>
+    <ion-grid>
+      <ion-row>
+        <ion-col class="start">
+          <mat-card-title [routerLink]="'/resume-templates'">Resumes</mat-card-title>
+          <mat-card-subtitle>Student/Intermediate</mat-card-subtitle>
+        </ion-col>
+        <ion-col class="start">
+          <mat-card-title [routerLink]="'/cv-templates'" class="card-active-link">CVs</mat-card-title>
+          <mat-card-subtitle>Senior</mat-card-subtitle>
+        </ion-col>
+        <ion-col class="start">
+          <mat-card-title [routerLink]="'/cover-letters'">Cover Letters</mat-card-title>
+          <mat-card-subtitle>All levels of experience</mat-card-subtitle>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </mat-card-header>
+  <mat-card-content class="info-content">
+    <ion-grid>
+      <ion-row>
+        <ion-col>
+          <h2>Pick from Free Resume Templates</h2>
+          <p>
+            Pick one of our free resume templates, fill it out, and land that
+            dream job! Create and download your professional resume in less that
+            5 minutes.
+          </p>
+        </ion-col>
+        <ion-col></ion-col>
+      </ion-row>
+    </ion-grid>
+  </mat-card-content>
+</mat-card>
+
 <app-footer></app-footer>
