--- a/src/app/components/resume/resume.component.html
+++ b/src/app/components/resume/resume.component.html
@@ -14,7 +14,7 @@
     <ion-grid>
       <ion-row>
         <ion-col class="start">
-          <mat-card-title [routerLink]="'/resume-templates'">Resumes</mat-card-title>
+          <mat-card-title [routerLink]="'/resume-templates'" class="card-active-link">Resumes</mat-card-title>
           <mat-card-subtitle>Student/Intermediate</mat-card-subtitle>
         </ion-col>
         <ion-col class="start">
@@ -22,9 +22,7 @@
           <mat-card-subtitle>Senior</mat-card-subtitle>
         </ion-col>
         <ion-col class="start">
-          <mat-card-title [routerLink]="'/cover-letters'"
-            >Cover Letters</mat-card-title
-          >
+          <mat-card-title [routerLink]="'/cover-letters'">Cover Letters</mat-card-title>
           <mat-card-subtitle>All levels of experience</mat-card-subtitle>
         </ion-col>
       </ion-row>
@@ -51,26 +49,49 @@
   <ion-row>
     <ion-col size="5">
       <mat-card class="resume-card" (click)="gotoResumeForm('basic')">
-        <mat-card-header>
-          <ion-grid>
-            <ion-row>
-              <ion-col size="2"> Jane Doe </ion-col>
-              <ion-col size="10"></ion-col>
-            </ion-row>
-            <ion-row>
-              <ion-col> Developer </ion-col>
-            </ion-row>
-          </ion-grid>
-        </mat-card-header>
-        <mat-card-content> </mat-card-content>
+        <ion-grid>
+          <ion-row>
+            <ion-col size="1"></ion-col>
+            <ion-col size="10">
+              <img class="image-card" mat-card-image src="../../../assets/images/basic.png" alt="Photo of a Shiba Inu">
+            </ion-col>
+            <ion-col size="1"></ion-col>
+          </ion-row>
+        </ion-grid>  
+        <ion-grid>
+          <ion-row>
+            <ion-col class="resume-name"> Basic 1/4 </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col class="resume-about">               
+              Easily personalize this basic resume layout that can be completed in under ten minutes through our intuitive process.
+            </ion-col>
+          </ion-row>
+        </ion-grid>      
       </mat-card>
     </ion-col>
     <ion-col size="2"></ion-col>
     <ion-col size="5">
       <mat-card class="resume-card" (click)="gotoResumeForm('executive')">
-        Simple card
-        <mat-card-header> </mat-card-header>
-        <mat-card-content> </mat-card-content>
+        <ion-grid>
+          <ion-row>
+            <ion-col size="1"></ion-col>
+            <ion-col size="10">
+              <img class="image-card" mat-card-image src="../../../assets/images/college.png" alt="Photo of a Shiba Inu">
+            </ion-col>
+            <ion-col size="1"></ion-col>
+          </ion-row>
+        </ion-grid>  
+        <ion-grid>
+          <ion-row>
+            <ion-col class="resume-name"> College 2/4 </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col class="resume-about">               
+              An updated and contemporary version of the 21st-century college resume template, being an alternative to the old styles.
+            </ion-col>
+          </ion-row>
+        </ion-grid> 
       </mat-card>
     </ion-col>
   </ion-row>
@@ -80,17 +101,49 @@
   <ion-row>
     <ion-col size="5">
       <mat-card class="resume-card" (click)="gotoResumeForm('basic')">
-        Simple card
-        <mat-card-header> </mat-card-header>
-        <mat-card-content> </mat-card-content>
+        <ion-grid>
+          <ion-row>
+            <ion-col size="1"></ion-col>
+            <ion-col size="10">
+              <img class="image-card" mat-card-image src="../../../assets/images/functional.png" alt="Photo of a Shiba Inu">
+            </ion-col>
+            <ion-col size="1"></ion-col>
+          </ion-row>
+        </ion-grid>  
+        <ion-grid>
+          <ion-row>
+            <ion-col class="resume-name"> Functional 3/4 </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col class="resume-about"> 
+              A functional resume template that works for all industries and will emphasize your strengths & work experience.
+            </ion-col>
+          </ion-row>
+        </ion-grid> 
       </mat-card>
     </ion-col>
     <ion-col size="2"></ion-col>
     <ion-col size="5">
       <mat-card class="resume-card" (click)="gotoResumeForm('executive')">
-        Simple card
-        <mat-card-header> </mat-card-header>
-        <mat-card-content> </mat-card-content>
+        <ion-grid>
+          <ion-row>
+            <ion-col size="1"></ion-col>
+            <ion-col size="10">
+              <img class="image-card" mat-card-image src="../../../assets/images/simple.png" alt="Photo of a Shiba Inu">
+            </ion-col>
+            <ion-col size="1"></ion-col>
+          </ion-row>
+        </ion-grid>  
+        <ion-grid>
+          <ion-row>
+            <ion-col class="resume-name"> Simple 4/4 </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col class="resume-about"> 
+              Simple resume layout for conservative industries, which is a minimalistic upgrade from the traditional resumes.
+            </ion-col >
+          </ion-row>
+        </ion-grid> 
       </mat-card>
     </ion-col>
   </ion-row>
