--- a/src/app/components/resumes/basic-resume/basic-resume.component.scss
+++ b/src/app/components/resumes/basic-resume/basic-resume.component.scss
@@ -8,7 +8,7 @@
   margin-left: 100px;
   margin-right: 100px;
   margin-bottom: 70px;
-  border-radius: 5px;
+  border-radius: 5px;  
   background-color: white;
   color: black;
   &:hover {
@@ -53,9 +53,17 @@
   width: 490px;
 }
 
-.input-space-work input[type=text]{
+.input-space-work input[type=text] {
   width:100%;
   height:40px;
+  outline:0;
+  padding:10px;
+  border: none;
+  border-bottom:1px solid #ccc;
+}
+
+.input-space-work textarea {
+  width:100%;
   outline:0;
   padding:10px;
   border: none;
@@ -85,4 +93,17 @@ fa-icon {
   &:hover {
     cursor: pointer;
   }
+}
+
+.error {
+  color: red;
+}
+
+.btn {
+  text-align: center;
+}
+
+.disabled-button{
+  opacity: 0.5;
+  pointer-events: none;
 }
