cv templates design

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,11 +13,14 @@
       <a mat-button [routerLink]="'/resume-templates'" routerLinkActive="active-link"> Resume Templates</a>
       <a mat-button [routerLink]="'/cv-templates'" routerLinkActive="active-link"> CV Templates </a>
       <a mat-button [routerLink]="'/cover-letters'" routerLinkActive="active-link"> Cover Letters </a>
-      <a mat-button [routerLink]="'/create-contact'" routerLinkActive="active-link"> Create Contact </a>
+      <a mat-button [routerLink]="'/create-contact'" routerLinkActive="active-link"> Examples </a>
       <a mat-button [routerLink]="'/activities'" routerLinkActive="active-link"> Activities </a>
-      <a mat-button [routerLink]="'/create-activity'"> Create Activity </a>
+      <a mat-button [routerLink]="'/create-activity'"> 
+        Account 
+        <mat-icon class="example-icon" aria-hidden="false" aria-label="Example heart icon">account_box</mat-icon>
+      </a>
     </div>
-    <mat-icon class="example-icon" aria-hidden="false" aria-label="Example heart icon">account_box</mat-icon>
+    
   </mat-toolbar-row>
 </mat-toolbar>
 
