--- a/src/app/components/cv-templates/cv-templates.component.html
+++ b/src/app/components/cv-templates/cv-templates.component.html
@@ -2,7 +2,7 @@
   <ion-row>
     <ion-col size="1"> </ion-col>
     <ion-col size="8">
-      <h1>Resume Templates</h1>
+      <h1>CV Templates</h1>
       <p>/ 5+ years of experience</p>
     </ion-col>
     <ion-col size="1"> </ion-col>
@@ -44,5 +44,109 @@
     </ion-grid>
   </mat-card-content>
 </mat-card>
+
+<ion-grid>
+  <ion-row>
+    <ion-col size="5">
+      <mat-card class="resume-card" (click)="gotoResumeForm('basic')">
+        <ion-grid>
+          <ion-row>
+            <ion-col size="1"></ion-col>
+            <ion-col size="10">
+              <img class="image-card" mat-card-image src="../../../assets/images/basic.png" alt="Photo of a Shiba Inu">
+            </ion-col>
+            <ion-col size="1"></ion-col>
+          </ion-row>
+        </ion-grid>  
+        <ion-grid>
+          <ion-row>
+            <ion-col class="resume-name"> Basic 1/4 </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col class="resume-about">               
+              Easily personalize this basic resume layout that can be completed in under ten minutes through our intuitive process.
+            </ion-col>
+          </ion-row>
+        </ion-grid>      
+      </mat-card>
+    </ion-col>
+    <ion-col size="2"></ion-col>
+    <ion-col size="5">
+      <mat-card class="resume-card" (click)="gotoResumeForm('executive')">
+        <ion-grid>
+          <ion-row>
+            <ion-col size="1"></ion-col>
+            <ion-col size="10">
+              <img class="image-card" mat-card-image src="../../../assets/images/college.png" alt="Photo of a Shiba Inu">
+            </ion-col>
+            <ion-col size="1"></ion-col>
+          </ion-row>
+        </ion-grid>  
+        <ion-grid>
+          <ion-row>
+            <ion-col class="resume-name"> College 2/4 </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col class="resume-about">               
+              An updated and contemporary version of the 21st-century college resume template, being an alternative to the old styles.
+            </ion-col>
+          </ion-row>
+        </ion-grid> 
+      </mat-card>
+    </ion-col>
+  </ion-row>
+</ion-grid>
+
+<ion-grid>
+  <ion-row>
+    <ion-col size="5">
+      <mat-card class="resume-card" (click)="gotoResumeForm('basic')">
+        <ion-grid>
+          <ion-row>
+            <ion-col size="1"></ion-col>
+            <ion-col size="10">
+              <img class="image-card" mat-card-image src="../../../assets/images/functional.png" alt="Photo of a Shiba Inu">
+            </ion-col>
+            <ion-col size="1"></ion-col>
+          </ion-row>
+        </ion-grid>  
+        <ion-grid>
+          <ion-row>
+            <ion-col class="resume-name"> Functional 3/4 </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col class="resume-about"> 
+              A functional resume template that works for all industries and will emphasize your strengths & work experience.
+            </ion-col>
+          </ion-row>
+        </ion-grid> 
+      </mat-card>
+    </ion-col>
+    <ion-col size="2"></ion-col>
+    <ion-col size="5">
+      <mat-card class="resume-card" (click)="gotoResumeForm('executive')">
+        <ion-grid>
+          <ion-row>
+            <ion-col size="1"></ion-col>
+            <ion-col size="10">
+              <img class="image-card" mat-card-image src="../../../assets/images/simple.png" alt="Photo of a Shiba Inu">
+            </ion-col>
+            <ion-col size="1"></ion-col>
+          </ion-row>
+        </ion-grid>  
+        <ion-grid>
+          <ion-row>
+            <ion-col class="resume-name"> Simple 4/4 </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col class="resume-about"> 
+              Simple resume layout for conservative industries, which is a minimalistic upgrade from the traditional resumes.
+            </ion-col >
+          </ion-row>
+        </ion-grid> 
+      </mat-card>
+    </ion-col>
+  </ion-row>
+</ion-grid>
 
 <app-footer></app-footer>
