--- a/src/app/components/cv-templates/cv-templates.component.scss
+++ b/src/app/components/cv-templates/cv-templates.component.scss
@@ -15,6 +15,47 @@
   margin: 25px;
 }
 
+.resume-card {
+  margin-top: 50px;
+  margin-left: 100px;
+  margin-right: 100px;
+  margin-bottom: 10px;
+  border-radius: 10px;
+  background-color: #d9d9d9;
+  color: black;
+  &:hover {
+    //transition: all 0.9s ease;
+    box-shadow: 0 8px 8px 8px rgba(0,0,0,.2), 0 8px 8px 0 rgba(0,0,0,.14), 0 8px 8px 0 rgba(0,0,0,.12) !important;
+    transform: translate3d(0,0,0);
+    transition: background .9s cubic-bezier(.25,.8,.25,1),box-shadow 280ms cubic-bezier(.4,0,.2,1);
+  }
+}
+
+.image-card {
+  padding-top: 50px;
+  padding-left: 30px;
+}
+
+.title {
+  padding-top: 20px;
+}
+
+.start {
+  text-align: start;
+}
+
+.center {
+  text-align: center;
+}
+
+.end {
+  text-align: end;
+}
+
+.info-content {
+  margin: 25px;
+}
+
 mat-card-title,
 mat-card-subtitle {
   cursor: pointer;
@@ -35,4 +76,16 @@ mat-card-subtitle {
   &:hover {
     transition: all 0.5s ease;
   }
+}
+
+.resume-name {
+  color: black;
+  font-size: large;
+  font-weight: bold;
+  font-family: "Raleway";
+}
+
+.resume-about {
+  color: black;
+  font-family: "Oxygen";
 }
