Added pipes,edit,mapping from object in preview

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,10 +13,9 @@
       <a mat-button [routerLink]="'/resume-templates'" routerLinkActive="active-link"> Resume Templates</a>
       <a mat-button [routerLink]="'/cv-templates'" routerLinkActive="active-link"> CV Templates </a>
       <a mat-button [routerLink]="'/cover-letters'" routerLinkActive="active-link"> Cover Letters </a>
-      <a mat-button [routerLink]="'/create-contact'" routerLinkActive="active-link"> Examples </a>
-      <a mat-button [routerLink]="'/activities'" routerLinkActive="active-link"> Activities </a>
-      <a mat-button [routerLink]="'/create-activity'"> 
-        Account 
+      <a mat-button> Examples </a>
+      <a mat-button> Activities </a>
+      <a mat-button> Account 
         <mat-icon class="example-icon" aria-hidden="false" aria-label="Example heart icon">account_box</mat-icon>
       </a>
     </div>
