--- a/src/app/components/previews/basic-preview/basic-preview.component.scss
+++ b/src/app/components/previews/basic-preview/basic-preview.component.scss
@@ -61,8 +61,12 @@
   font-size: medium;  
 }
 
-.ptag {
+.ptag, .ptask {
   white-space: pre-wrap;
+}
+
+.date {
+  font-style: italic;
 }
 
 .ptag1Ubuntu {
@@ -95,4 +99,7 @@
   }
 }
 
-
+.social {
+  align-items: center;
+  text-align: center;
+}
