Designed college resume template

--- a/src/app/components/previews/basic-preview/basic-preview.component.scss
+++ b/src/app/components/previews/basic-preview/basic-preview.component.scss
@@ -103,3 +103,11 @@
   align-items: center;
   text-align: center;
 }
+
+.side-social {
+  width: 100%;
+}
+
+.heading-align {
+  text-align: center;
+}
