--- a/src/app/components/resume/resume.component.html
+++ b/src/app/components/resume/resume.component.html
@@ -72,7 +72,7 @@
     </ion-col>
     <ion-col size="2"></ion-col>
     <ion-col size="5">
-      <mat-card class="resume-card" (click)="gotoResumeForm('executive')">
+      <mat-card class="resume-card" (click)="gotoResumeForm('college')">
         <ion-grid>
           <ion-row>
             <ion-col size="1"></ion-col>
