--- a/src/app/components/resume/resume.component.html
+++ b/src/app/components/resume/resume.component.html
@@ -100,7 +100,7 @@
 <ion-grid>
   <ion-row>
     <ion-col size="5">
-      <mat-card class="resume-card" (click)="gotoResumeForm('basic')">
+      <mat-card class="resume-card" (click)="gotoResumeForm('functional')">
         <ion-grid>
           <ion-row>
             <ion-col size="1"></ion-col>
@@ -124,7 +124,7 @@
     </ion-col>
     <ion-col size="2"></ion-col>
     <ion-col size="5">
-      <mat-card class="resume-card" (click)="gotoResumeForm('executive')">
+      <mat-card class="resume-card" (click)="gotoResumeForm('simple')">
         <ion-grid>
           <ion-row>
             <ion-col size="1"></ion-col>
